--- a/src/index.scss
+++ b/src/index.scss
@@ -8,17 +8,17 @@
 :root {
   --primary-color: #3f5c64;
   --secondary-color: #001519;
+  --transition: all 500ms ease;
 }
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
 }
 
 body {
+  background-color: var(--primary-color);
   margin: 0;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
