--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,15 @@
 /* Add sass files */
 @import './styles/custom.scss';
 
+@layer components {
+  .btn-primary {
+    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+  }
+  .section-heading {
+    @apply text-4xl font-bold text-center text-white uppercase;
+  }
+}
+
 // primary
 :root {
   --primary-color: #3f5c64;
@@ -53,4 +62,8 @@ p {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  transition: var(--transition);
 }
