--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@
 @import './styles/custom.scss';
 
 @layer components {
+  .navbar {
+    @apply w-screen h-[5rem] grid place-items-center bg-green-400 fixed top-0 left-0 shadow-lg transition ease-in-out delay-150 duration-300;
+  }
   .btn-primary {
     @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
