--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,9 @@
   .section-heading {
     @apply text-4xl font-bold text-center text-white uppercase;
   }
+  .header-social-icons {
+    @apply w-7 aspect-square bg-green-300  rounded grid place-items-center hover:-translate-x-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+  }
 }
 
 // primary
