--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 /* Add sass files */
+
+//Add Animate CSS
+@import 'animate.css';
+
 @import './styles/custom.scss';
 
 @layer components {
