Add swiper style

--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -1,6 +1,8 @@
 .swiper {
   height: fit-content;
   padding-bottom: 3rem !important;
+  // may need for firefox
+  // height: 30rem;
 }
 // .swiper-pagination {
 //   bottom: -33px;
