--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,5 @@
 //portfolio fade in animation
-.portfolio {
+#portfolio {
   animation: animateFadeIn 800ms ease-in forwards;
 }
 
@@ -9,5 +9,21 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+// fade up animation
+#floating-nav {
+  animation: animateFloatingNav 300ms ease forwards;
+}
+
+@keyframes animateFloatingNav {
+  from {
+    opacity: 0;
+    bottom: -5rem;
+  }
+  to {
+    opacity: 1;
+    bottom: 3rem;
   }
 }
