--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
 
 @layer components {
   .navbar {
-    @apply w-screen h-[4rem] lg:h-[5rem] grid place-items-center bg-green-400 fixed top-0 left-0 z-[100] shadow-lg transition ease-in-out delay-150 duration-300;
+    @apply w-screen h-[4rem] lg:h-[5rem] grid place-items-center bg-secondary fixed top-0 left-0 z-[100] shadow-lg transition ease-in-out delay-150 duration-300;
   }
   .btn-primary {
     @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
@@ -20,7 +20,7 @@
     @apply text-4xl font-bold text-center text-white uppercase;
   }
   .header-social-icons {
-    @apply w-7 aspect-square bg-green-300 rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply w-7 aspect-square bg-[#191451] rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .theme-transition {
     @apply transition ease-in-out delay-150 duration-300;
@@ -33,7 +33,7 @@
 
 // primary
 :root {
-  --primary-color: #3f5c64;
+  --primary-color: black;
   --secondary-color: #001519;
   --transition: all 500ms ease;
 }
