Fix colour style

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@
 
 // primary
 :root {
-  --primary-color: black;
+  --primary-color: #3f5c64;
   --secondary-color: #001519;
   --transition: all 500ms ease;
 }
