--- a/src/index.scss
+++ b/src/index.scss
@@ -91,3 +91,15 @@ a {
   color: #fff;
   background: var(--primary-color);
 }
+
+header.header {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0),
+      rgba(0, 0, 0, 0.73)
+    ),
+    url('../src/assets/images/stars-treeline-min.jpg');
+  background-position: 25% 75%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
