--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@
 :root {
   --primary-color: #00d4ff;
   // --primary-color: #3f5c64;
-  --secondary-color: #001519;
+  --secondary-color: #111441;
   --tertiary-color: #fe53bb;
   --transition: all 500ms ease;
 
@@ -22,6 +22,7 @@
   // $tertiary-blue: #00d4ff;
   // $green: #72ff00;
   // $black: #001519;
+  // $dark-purple: #111441;
 }
 
 @layer components {
@@ -29,13 +30,13 @@
     @apply w-screen h-[4rem] lg:h-[5rem] grid place-items-center bg-secondary fixed top-0 left-0 z-[100] shadow-lg transition ease-in-out delay-150 duration-300;
   }
   .btn-primary {
-    @apply py-2 px-6 bg-teal-600 text-white font-semibold rounded-lg shadow-md hover:bg-[--secondary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply py-2 px-6 bg-secondary text-primary font-semibold  border border-primary rounded-lg shadow-md hover:bg-[--secondary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .section-heading {
     @apply text-3xl font-bold mb-7 text-white uppercase;
   }
   .header-social-icons {
-    @apply w-7 aspect-square bg-teal-600 rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply w-7 aspect-square bg-secondary text-primary rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .theme-transition {
     @apply transition ease-in-out delay-150 duration-300;
@@ -99,12 +100,15 @@ a {
 }
 
 header.header {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0),
-      rgba(0, 0, 0, 0.73)
-    ),
+  background-image: linear-gradient(to bottom, #ffffff85, rgba(29, 5, 96, 0.73)),
     url('../src/assets/images/stars-treeline-min.jpg');
+
+  // linear-gradient(
+  //     to bottom,
+  //     rgba(255, 255, 255, 0),
+  //     rgba(0, 0, 0, 0.73)
+  //   ),
+  //   url('../src/assets/images/stars-treeline-min.jpg');
   background-position: 25% 75%;
   background-size: cover;
   background-repeat: no-repeat;
