--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@
     @apply py-2 px-6 bg-secondary text-primary font-semibold  border border-primary rounded-lg shadow-md hover:bg-[--secondary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .section-heading {
-    @apply text-3xl font-bold mb-7 text-white uppercase;
+    @apply text-3xl font-bold mb-7 uppercase;
   }
   .header-social-icons {
     @apply w-7 aspect-square bg-secondary text-primary rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
@@ -100,15 +100,11 @@ a {
 }
 
 header.header {
-  background-image: linear-gradient(to bottom, #ffffff85, rgba(29, 5, 96, 0.73)),
-    url('../src/assets/images/stars-treeline-min.jpg');
-
-  // linear-gradient(
-  //     to bottom,
-  //     rgba(255, 255, 255, 0),
-  //     rgba(0, 0, 0, 0.73)
-  //   ),
+  background-image:
+  // linear-gradient(to bottom, #ffffff85, rgba(29, 5, 96, 0.73)),
   //   url('../src/assets/images/stars-treeline-min.jpg');
+    linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.73)),
+    url('../src/assets/images/stars-treeline-min.jpg');
   background-position: 25% 75%;
   background-size: cover;
   background-repeat: no-repeat;
