--- a/src/index.scss
+++ b/src/index.scss
@@ -42,7 +42,7 @@
     @apply text-3xl font-bold  uppercase;
   }
   .header-social-icons {
-    @apply w-7 aspect-square bg-secondary text-primary rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-white focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply w-7 aspect-square bg-secondary text-primary rounded hidden lg:grid place-items-center hover:-translate-x-1 hover:bg-tertiary  hover:text-secondary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .theme-transition {
     @apply transition ease-in-out delay-150 duration-300;
@@ -119,12 +119,16 @@ header {
     position: absolute;
     content: '';
     width: 100vw;
-    height: 10rem;
+    height: 9rem;
     z-index: -1;
     left: 0;
     top: -5rem;
     background: var(--secondary-color);
     transform: skewY(-4deg);
+
+    @media (min-width: 768px) {
+      height: 10rem;
+    }
   }
 }
 
