--- a/src/index.scss
+++ b/src/index.scss
@@ -146,3 +146,7 @@ header {
     transform: skewY(-4deg);
   }
 }
+
+// .section-heading-shadow {
+//   text-shadow: 2px 2px 2px var(--primary-color);
+// }
