--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -9,5 +9,5 @@
 // }
 
 .swiper-pagination-bullet {
-  background-color: green !important;
+  background-color: var(--tertiary-color) !important;
 }
