--- a/src/index.scss
+++ b/src/index.scss
@@ -38,7 +38,7 @@
   }
 
   .btn-primary {
-    @apply py-2 px-6 bg-secondary font-bold text-primary border border-primary rounded-lg shadow-md hover:border-[--tertiary-color] hover:text-[--tertiary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply py-2 px-4 md:px-6 bg-secondary font-bold text-xs md:text-base text-primary border border-primary rounded-lg shadow-md hover:border-[--tertiary-color] hover:text-[--tertiary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
 
     &.btn-active {
       @apply border-[--tertiary-color] text-white bg-tertiary font-bold;
@@ -46,7 +46,7 @@
   }
 
   .btn-tertiary {
-    @apply py-2 px-6 bg-secondary font-bold text-tertiary border border-tertiary rounded-lg shadow-md hover:border-[--primary-color] hover:text-[--primary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
+    @apply py-2 px-6 md:px-6 bg-secondary font-bold text-tertiary text-xs md:text-base border border-tertiary rounded-lg shadow-md hover:border-[--primary-color] hover:text-[--primary-color] hover:-translate-y-1 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75 transition ease-in-out delay-150 duration-300;
   }
   .section-heading {
     @apply text-3xl font-bold  uppercase;
