Update bullet styles

--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -10,7 +10,7 @@
 
 .swiper-pagination-bullet {
   background-color: var(--tertiary-color) !important;
-  border-radius: 0% !important;
+  border-radius: 0.5rem !important;
 }
 .swiper-pagination-bullet-active {
   width: 15px !important;
