--- a/src/styles/swiper.scss
+++ b/src/styles/swiper.scss
@@ -7,7 +7,28 @@
 // .swiper-pagination {
 //   bottom: -33px;
 // }
+.swiper-button-next,
+.swiper-button-prev {
+  background-color: white;
+  background-position: center;
+  background-size: 40px;
+  background-repeat: no-repeat;
+  padding: 8px 16px;
+  border-radius: 100%;
+  border: 2px solid black;
+  color: red;
+}
 
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: '';
+}
+
+.swiper-pagination-bullet {
+  width: 40px;
+  height: 40px;
+  background-color: red;
+}
 .swiper-pagination-bullet {
   background-color: var(--tertiary-color) !important;
   border-radius: 0.5rem !important;
